--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,14 @@ body {
     line-height: 130%;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Rubik', 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
+.brand {
+    font-family: 'Archivo Black', 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
+
 .nav li {
     margin-top: 10px;
 }
