--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .content .section {
     margin-top: 40px;
+    margin-bottom: 60px;
 }
 
 .content .section:before {
@@ -75,6 +76,9 @@ h1, h2, h3, h4, h5, h6 {
     filter: none;
     opacity: 1;
 }
+
+.table-indent {
+    margin-left: 15px;
 }
 
 .footer-text {
