--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,11 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 10px;
 }
 
+.navbar-header a:hover,
+.navbar-header a:focus {
+    text-decoration: none;
+}
+
 .navbar-toggle {
     margin-top: 20px;
 }
@@ -98,6 +103,7 @@ a {
     margin-top: 25px;
     display: inline;
     max-height: 60px;
+    max-width: 100%;
     opacity: 0.8;
     filter: gray; /* IE6-9 */
     -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
