--- a/css/main.css
+++ b/css/main.css
@@ -155,15 +155,21 @@ a {
 }
 
 .partner-logos img {
-    margin-right: 50px;
-    margin-top: 25px;
+    margin-right: 35px;
+    margin-left: 35px;
+    margin-top: 40px;
     display: inline;
     max-height: 60px;
     max-width: 100%;
-    opacity: 0.8;
+    opacity: 0.7;
     filter: gray; /* IE6-9 */
     -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
     filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
+}
+
+.partner-logos img#chicago-reporter {
+    /* Extra-low opacity for the Chicago Reporter logo, which is high contrast */
+    opacity: 0.6
 }
 
 img.big-logo {
@@ -174,7 +180,8 @@ img.small-logo {
     max-height: 80px;
 }
 
-.partner-logos img:hover {
+.partner-logos img:hover,
+.partner-logos img#chicago-reporter:hover {
     -webkit-filter: grayscale(0);
     filter: none;
     opacity: 1;
